Bug 1991871 - [gfx] Use shared font list for Safe Mode as well. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D269701